--- a/Theory.tex
+++ b/Theory.tex
@@ -32,8 +32,7 @@ In addition to the attributes described above, fermions are furthermore characte
 Matter particles interact with each other through fundamental forces mediated via gauge bosons. These bosons arise from the principle of local gauge invariance under symmetry transformations. 
  \begin{description}
   \item \textit{Electromagnetic Force:} The description of the electromagnetic force is based on the theory of \textit{Quantum Electrodynamics} (QED). It is exchanged between electrically charged particles, like the charged leptons and quarks, by the exchange of photons. These are massless and electrically neutral resulting in the property that the electromagnetic force is long ranged.
-  \item \textit{Weak Force:} The weak force acts on the weak charge which is carried by all fermions in the SM. It is mediated by three vector bosons -- namely the two charged \Wpm bosons and the neutral \Z boson, which take part in the weak interaction as well. Unlike the photon, these vector bosons are massive with masses\footnote{In this thesis, natural units are used, \ie $\hbar = c =1$. Thus, also particle masses and momenta have the dimension of energies.} of $\Wpm = 80.385 \pm 0.015$\gev and $\Z = 91.1876 \pm 0.0021$\gev~\cite{bib:PDG:2012}. As a result, the weak interaction is suppressed with respect to the electromagnetic force. \\
-Weak interactions preferably take place within one generation, \eg \lel or \lmu transform into the respective neutrinos when emitting a \Wm. However, since the mass eigenstates in the weak interaction differ from the flavour eigenstates, \Wpm bosons can also couple to fermions between different generations. In the quark-sector typically a representation is chosen where the up-type flavour eigenstates correspond to the mass eigenstates and the down-type quarks mix. This mixing is described by the CKM-matrix ~\cite{PhysRevLett.10.531, PTP.49.652}. This is a unitary matrix, described by three mixing angles and one CP-violating phase, which indicates the relative strength between individual transitions. Similarly, also in the neutrino sector a mixing between the weak and the mass eigenstates occurs which leads to the phenomenom of \textit{neutrino oscillation}~\cite{Maki:1962mu, Pontecorvo:1967fh, Fukuda:1998mi}.
+  \item \textit{Weak Force:} The weak force acts on left-handed fermions, \ie on fermions with non-zero weak isospin, and manifests in charged and neutral currents. Weak interactions preferably take place within one fermion generation. However, since the mass eigenstates in the weak interaction differ from the flavour eigenstates, also transitions between different generations are possible. In the quark-sector typically a representation is chosen where the up-type flavour eigenstates correspond to the mass eigenstates and the down-type quarks mix. This mixing is described by the CKM-matrix ~\cite{PhysRevLett.10.531, PTP.49.652}. This is a unitary matrix, described by three mixing angles and one CP-violating phase, which indicates the relative strength between individual transitions. Similarly, also in the neutrino sector a mixing between the weak and the mass eigenstates occurs which leads to the phenomenom of \textit{neutrino oscillation}~\cite{Maki:1962mu, Pontecorvo:1967fh, Fukuda:1998mi}.
   \item \textit{Strong Force:} The theoretical framework describing the strong force is called Quantum Chromodynamics (QCD). It is mediated via eight massless gluons and acts on the colour charge which is carried for instance by quarks. In contrast to the photon, which is electrically neutral and thus can not interact with itself, gluons carry a colour charge and hence couple to themselves. The colour charge exists in three different states commonly denoted as 'red', 'green' and 'blue'. \\
 Regarding the dependence on the distance, the strong force behaves differently than other fundamental forces: the coupling strength increases with rising distance. This is a consequence of the different colour states and the self-coupling property of gluons. It is referred to as \textit{confinement}~\cite{Alkofer:2006fu} and describes the fact that coloured objects can not exist freely. Actually, when separated, coloured objects start to build new coloured particles until only a colour neutral formation is left. Such colourless objects linked by the strong force are named \textit{hadrons}. On the other hand, particles taking part in the strong interaction start to behave quasi-free, \ie the coupling strength is small, when the distance decreases. This feature is known as \textit{asymptotic freedom}~\cite{PhysRevLett.30.1346, PhysRevLett.30.1343}. \\
 A typical example for a hadron is the proton. In a simplified picture, it is composed of three quarks: two up quarks and one down quark (\textit{valence quarks}). However, the valence quarks continuously exchange gluons which can exchange further gluons or split into quark-antiquark pairs (\textit{sea quarks}). The constituents of the proton are commonly denoted \textit{partons} and the internal proton structure is described by \textit{parton-distribution functions} (PDFs) specifying the momentum fraction of the proton carried by individual partons.
@@ -42,7 +41,7 @@ First proposed by Salam, Glashow and Weinberg~\cite{Glashow:1961tr, Weinberg:196
 \begin{equation*}
 Q = T_{3} + Y/2
 \end{equation*}
-In the electroweak theory, three gauge bosons $W^{1,2,3}_{\mu}$ are introduced for $SU(2)_{L}$ and one gauge boson $B_{\mu}$ for $U(1)_{Y}$. The physical states photon, \Wpm and \Z are formed by mixing of these massless states. While the charged $\Wpm$ bosons are superpositions of $W^{1}_{\mu}$ and $W^{2}_{\mu}$, the fields $A_{\mu}$ of the photon and $Z_{\mu}$ of the neutral vector boson are obtained by a mixing of the gauge fields $W^{3}_{\mu}$ and $B_{\mu}$ according to
+In the electroweak theory, three gauge bosons $W^{1,2,3}_{\mu}$ are introduced for $SU(2)_{L}$ and one gauge boson $B_{\mu}$ for $U(1)_{Y}$. The physical states photon, \Wpm and \Z boson are formed by mixing of these massless states. While the charged $\Wpm$ bosons are superpositions of $W^{1}_{\mu}$ and $W^{2}_{\mu}$, the fields $A_{\mu}$ of the photon and $Z_{\mu}$ of the neutral vector boson are obtained by a mixing of the gauge fields $W^{3}_{\mu}$ and $B_{\mu}$ according to
 \begin{equation}
 \left(
 \begin{matrix}
@@ -66,7 +65,7 @@ with the weak mixing angle $\theta_{W}$. This mixing angle relates also the elec
 \begin{equation}
 e = g \, \mathrm{sin} \, \theta_{W} \; .
 \end{equation}
-The fields $W^{\mu}$ couple only to left-handed fermions, such that the same holds true also for $W^{\pm}$. Since however, the $B^{\mu}$ couples to left- and right-handed states, a coupling to left- and right-handed fermions takes place for $\gamma$ and $\Z^0$ as well.   
+The fields $W^{\mu}$ couple only to left-handed fermions, such that the same holds also for $W^{\pm}$. Since however, the $B^{\mu}$ couples to left- and right-handed states, a coupling to left- and right-handed fermions takes place for $\gamma$ and $Z^0$ as well. Unlike the photon, the $W^{\pm}$ and $Z$ vector bosons are massive with masses\footnote{In this thesis, natural units are used, \ie $\hbar = c =1$. Thus, also particle masses and momenta have the dimension of energies.} of $\Wpm = 80.385 \pm 0.015$\gev and $\Z = 91.1876 \pm 0.0021$\gev~\cite{bib:PDG:2012}. As a result, the weak interaction is suppressed with respect to the electromagnetic force. 
 \item \textbf{Higgs Boson:} The electroweak theory in the current representation requires that fermions and bosons are massless particles as mass terms violate the gauge invariance under $SU(2)_{L} \otimes U(1)_{Y}$ transformations. This is in contradiction to experimental observations which have shown that all particles, except for photon and gluon, in fact do have mass. \\
 An explanation for the generation of particle masses without violation of the principles of the electroweak theory is provided by the \textit{Higgs-mechanism}~\cite{PhysRevLett.13.508, PhysRevLett.13.321, PhysRevLett.13.585} which is based on the concept of spontaneous symmetry breaking. The main idea behind this meachnism is that while in general the principle of local gauge invariance is obeyed, it is explicitly broken by the ground state. \\
 In the context of the Higgs-mechanism, this is realized by the introduction of the Higgs field $\Phi$ described by a potential 
@@ -143,7 +142,7 @@ Moreover, supersymmetry might also provide an indication of the nature of gravit
 
 \subsection{The MSSM}
 \label{subsec:mssm}
-The smallest possible supersymmetric extension of the SM including the full particle spectrum and interactions is realised in the MSSM, often referred to as \textit{N=1} supersymmetry. An overview of the respective particle content is given in Tab.~\ref{tab:mssm_particles}. 
+In general, it is possible to have theories with more than one supersymmetry transformation. However, the smallest possible supersymmetric extension of the SM including the full particle spectrum and interactions, \ie a $N = 1$ supersymmetry, is realised in the MSSM. An overview of the respective particle content is given in Tab.~\ref{tab:mssm_particles}. 
 \begin{table}[htbp] 
   \centering
   \label{tab:mssm_particles}
@@ -176,8 +175,12 @@ The smallest possible supersymmetric extension of the SM including the full part
  \caption{Supersymmetric particles contained in the MSSM neglecting mixing in the first two sfermion generations. Adapted from~\cite{Martin:1997ns}.} 
 \end{table}
 This extension is minimal in that sense that it introduces the least feasible number of additional particles to the existing SM particles meaning that each SM fermion gets one superpartner. The interactions and couplings of the supersymmetric particles are the same as for the SM counterparts. The different transformation of left- and right-handed fermions under the gauge groups implies the necessity to introduce separate superpartners for left- and right-handed states as well. These are arranged with their bosonic (spin 0) superpartner in a \textit{chiral} supermultiplet. The labels indicating the left- and right-handed states refer to the helicity of the respective SM particle. These supersymmetric partners of fermions are named \textit{sfermions} distinguishing between \textit{sleptons} and \textit{squarks}, the supersymmetric partners of leptons and quarks. In a similar manner, the SM gauge bosons are arranged in \textit{gauge} supermultiplets together with their fermionic (spin 1/2) supersymmetric correspondents. The SUSY partners of the gauge bosons are named \textit{gauginos} so that the superpartners in the gauge supermultiplets are the \textit{gluino}, \textit{wino} and \textit{bino}. The corresponding gaugino mixtures of the neutral wino and the bino are the \textit{photino} and the \textit{zino}. Furthermore, the supersymmetric particle spectrum is extended by another supermultiplet containing the graviton (spin 2) and the respective supersymmetric partner -- the \textit{gravitino} (spin 3/2). \\
-As described in Sec.~\ref{sec:sm}, masses arise in the SM from the concept of spontaneous symmetry breaking implying the existence of the Higgs boson. The supersymmetric partner of the Higgs boson is named \textit{higgsino}. While in the SM one Higgs doublet is sufficient to give mass to all particles, the Higgs sector needs to be extended in the MSSM. Here, two Higgs doublets are needed where one doublet $H_u$ gives mass to the up-type quarks and the other one $H_d$ to the down-type quarks, respectively. These two doublets have together eight degrees of freedom of which three are needed to give mass to the gauge bosons of the weak interaction as in the SM. This results in five physical Higgs bosons which are the two scalar Higgs particles $h^0, H^0$, the pseudoscalar $A^0$ as well as the charged Higgs bosons $H^{\pm}$. As further consequence, there are two vacuum expectation values $v_u$ and $v_d$ present, each assigned to one Higgs doublet, whose ratio $\mathrm{tan} \, \beta = v_u/v_d$ is a free parameter of the model. \\
-As in the SM, the gauge eigenstates of the theory are not necessarily equal to the mass eigenstates. A mixing occurs especially in the gaugino sector. Here, the neutral components of the bino and wino mix with the neutral higgsinos and form four mass eigenstates -- the \textit{neutralinos} $\tilde{\chi}^0$. Similarly, also the charged gauginos and higgsinos mix to the four \textit{charginos} $\tilde{\chi}^{\pm}$. Furthermore, mixing can also appear in the third squark and slepton generation. The mixing is supposed to be significant only for fermions of the third generation as the off-diagonal elements of the sfermion mass matrix are proportional to the mass of the respective SM partner. 
+As described in Sec.~\ref{sec:sm}, masses arise in the SM from the concept of spontaneous symmetry breaking implying the existence of the Higgs boson. The supersymmetric partner of the Higgs boson is named \textit{higgsino}. While in the SM one Higgs doublet is sufficient to give mass to all particles, the Higgs sector needs to be extended in the MSSM. Here, two Higgs doublets are needed where one doublet $H_u$ gives mass to the up-type quarks and the other one $H_d$ to the down-type quarks, respectively. These two doublets have together eight degrees of freedom of which three are needed to give mass to the gauge bosons of the weak interaction as in the SM. This results in five physical Higgs bosons which are the two scalar Higgs particles $h^0, H^0$, the pseudoscalar $A^0$ as well as the charged Higgs bosons $H^{\pm}$. As further consequence, there are two vacuum expectation values $v_u$ and $v_d$ present, each assigned to one Higgs doublet, whose ratio $\mathrm{tan} \, \beta = v_u/v_d$ is a free parameter of the model. Within the MSSM the mass of the lightest Higgs boson is restricted to be smaller than the $Z$-boson mass at tree level. However, due to radiative corrections, which mainly arise from the top sector, this limit is enhanced and results in an upper bound of 
+\begin{equation*}
+m_{h^0} \lesssim 135 \gev \; .
+\end{equation*}
+Consequently, significant contributions from the top squark mass are required to push the mass of the lightest Higgs boson up to a value of around 125\gev. This is somewhat in tension to the requirement of having a stop quark mass close to the top mass in order to solve the hierarchy problem. However, it is still possible to accommodate a Higgs mass of 125\gev without the necessity to decouple the top squark or add new dynamics to the MSSM. These scenarios are referred to as \textit{maximal mixing}~\cite{Djouadi:2005gj}. \\
+As in the SM, the gauge eigenstates of the theory are not necessarily equal to the mass eigenstates. A mixing occurs especially in the gaugino sector. Here, the neutral components of the bino and wino mix with the neutral higgsinos and form four mass eigenstates called \textit{neutralinos} $\tilde{\chi}^0$. Similarly, also the charged gauginos and higgsinos mix to the four \textit{charginos} $\tilde{\chi}^{\pm}$. Furthermore, mixing can also appear in the third squark and slepton generation. The mixing is supposed to be significant only for fermions of the third generation as the off-diagonal elements of the sfermion mass matrix are proportional to the mass of the respective SM partner. 
 
 \subsection{SUSY-Breaking}
 \label{subsec:susy_breaking}
@@ -191,7 +194,6 @@ As in the SM, the gauge eigenstates of the theory are not necessarily equal to t
 \end{figure}
 As discussed above, SUSY particles are expected to have the same mass as their corresponding SM partner particle. However, none of such particles has been observed so far which implies that supersymmetry in fact must be broken and that sparticles are actually heavier than the SM counterpart. If SUSY is expected to provide a solution to the hierarchy problem, the mass difference to the SM particles should consequently not be too large and the characteristic mass scale needs to be around 1\tev~\cite{Martin:1997ns}. \\
 Typically, SUSY breaking is introduced such that so-called \textit{soft breaking} terms, \ie of positive mass dimension, are added to the theory in addition to the terms determining the gauge and Yukawa couplings. The SUSY breaking is assumed to take place in a hidden sector which does not couple directly to the visible sector represented by the supermultiplets. In this case, no specific breaking mechanism must be assumed, but only a mechanism to describe the mediation of the supersymmetry breaking from the hidden to the visible sector. In total, the MSSM including soft SUSY breaking features several new phases, mixing angles and masses which add another 105 free parameters to the already existing parameters of the SM~\cite{Dimopoulos:1995ju}.  \\
-\\
 Two SUSY breaking scenarios, that are often studied, are either based on gravity-mediated or gauge-mediated interactions and known as \textit{minimal supergravity} (mSUGRA)~\cite{Chamseddine:1982jx, AlvarezGaume:1983gj} or \textit{constrained MSSM} (CMSSM)~\cite{Kane:1993td, Baer:2002gm} and \textit{gauge-mediated supersymmetry breaking} (GMSB)~\cite{Dine:1981gu, AlvarezGaume:1981wy}. Assuming a specific breaking scenario usually allows to drastically reduce the number of free parameters in the theory and determines the phenomenology of the respective model. In case of mSUGRA/CMSSM, the whole model can be described by five parameters, which are the common scalar mass $m_0$ and the common mass of the gauginos and higgsinos $m_{1/2}$ at the GUT scale, the common trilinear coupling $A_0$, $\mathrm{tan} \, \beta = v_u/v_d$ and the sign of the higgsino mass parameter $\mu$. In Fig.~\ref{fig:MSSMrun} the evolution of the corresponding mass parameters to the electroweak scale are illustrated.  
 
 \section{Searches for Supersymmetry and Current Constraints}
@@ -213,7 +215,6 @@ Interpretations of combined results from all four experiments in the mSUGRA mode
  \item \textbf{\tevatron:} The \tevatron accelerator made a further SUSY parameter space for searches accessible, as the centre of mass energy exceeded that of \hera and \lep by at least one order of magnitude. A rich program of supersymmetric searches was enabled covering various final states of different lepton, photon or jet multiplicities. Of special interest is the search for coloured sparticles like squarks and gluinos, as \tevatron is a hadron collider. The expected decay topologies are very similar to those at the LHC and thus discussed below. \\
 Results from SUSY searches at the Tevatron have been interpreted in the context of mSUGRA and extended the LEP results in the parameter region of $m_{0} =$ 70--300\gev and $m_{1/2} =$ 125--165\gev. This allows to exclude gluinos below around 280--300\gev for all squark masses and squarks below $380$\gev independent of the gluino mass~\cite{CDFLimits, D0Limits, Abazov200934}. 
 \end{description}
-The absence of SUSY-like signals at any collider experiment performed previously to the start of the LHC and exclusion limits at the order of a few hundred GeV on sparticle masses activated a variety of searches for supersymmetry at the LHC. It made already with a centre of mass energy of 7\tev an even larger SUSY parameter space accessible than the \tevatron. At the LHC, a variety of searches targeting the various different production and decay modes of supersymmetric partices are performed. In general, they can be classified into searches for electroweakinos, third generation sfermions and searches for squarks and gluinos. Of particular interest are searches for coloured particles, as the LHC is, as well as the \tevatron, a hadron collider. 
 \begin{figure}[!tp]
   \centering 
   \begin{tabular}{cc}
@@ -222,6 +223,7 @@ The absence of SUSY-like signals at any collider experiment performed previously
   \caption{Example diagrams for the production of supersymmetric particles in hadron collisions at parton level.}
   \label{fig:susy_feynman}
 \end{figure}
+The absence of SUSY-like signals at any collider experiment performed previously to the start of the LHC and exclusion limits at the order of a few hundred GeV on sparticle masses activated a variety of searches for supersymmetry at the LHC. It made already with a centre of mass energy of 7\tev an even larger SUSY parameter space accessible than the \tevatron. At the LHC, a variety of searches targeting the various different production and decay modes of supersymmetric partices are performed. In general, they can be classified into searches for electroweakinos, third generation sfermions and searches for squarks and gluinos. Of particular interest are searches for coloured particles, as the LHC is, as well as the \tevatron, a hadron collider. 
 \\
 At leading order sparticles in $R$-parity conserving models are predominantly produced in processes like~\cite{Kane:1982hw, Harrison:1982yi, Reya:1984yz, Dawson:1983fw, Baer:1985xz}
 \begin{equation}
@@ -243,7 +245,7 @@ Some example diagrams for the production modes of such processes at parton level
 \end{figure}
 \\
 Most recent SUSY cross section calculations consider higher order corrections caused, \eg by quark radiation or gluon loops, typically up to next-to-leading order (NLO). Production cross sections for the processes $pp \rightarrow \tilde{g}\tilde{g}$, $pp \rightarrow \tilde{q}\tilde{q}$ and $pp \rightarrow \tilde{t}\tilde{t}$ are illustrated in Fig.~\ref{fig:susy_cross_sec} for different sparticle masses as function of the centre of mass energy. For instance, for a gluino with a mass of 1.5\tev, the gluino pair-production cross section is expected to be at the order of $10^{-4}$\pb at $\sqrt{s} = 7$\tev. Typically, the relative size of the different channels depends on the respective squark and gluino masses as well as the energy of the collider. While for small masses of SUSY particles or large collider energies the cross sections of gluinos are dominant, squark-pair production (and also associated squark-gluino production) are favoured in case of large SUSY masses and low collider energies. \\
-In addition to various different production channels, also the decay of supersymmetric particles offers a rich variety of different modes depending on the specific mass hierarchy. In Fig.~\ref{fig:susy_decay}, some example diagrams for possible decay modes of squarks and gluinos are illustrated. Here, the three-body decay vertices in the upper two diagrams have to be understood as effective couplings. These occur in case squark masses are decoupled from the rest of the particle spectrum, \ie that their masses are significantly larger than that of the gluinos. While squarks are expected to decay preferrably into a quark and the LSP, gluinos predominantly decay into a quark pair and the LSP. In case of gluino decays, the quark pair can also be, for instance, a pair of top quarks representing the case of gluino-mediated stop production. In all such cases, a multijet final state accompanied by missing transverse momentum with no isolated leptons is expected as experimental signature\footnote{In general, final state topologies including leptons can occur as well, for instance in cascade decays or semi-leptonic decays of final state top quarks. However, since the analyses presented in this thesis concentrate on all-jet final states, final states including leptons are not discussed.}.  
+In addition to various different production channels, also the decay of supersymmetric particles offers a rich variety of different modes depending on the specific mass hierarchy. In Fig.~\ref{fig:susy_decay}, some example diagrams for possible decay modes of squarks and gluinos are illustrated. Here, the three-body decay of the gluinos in the upper two diagrams have to be understood as effective couplings. These occur in case squark masses are decoupled from the rest of the particle spectrum, \ie that their masses are significantly larger than that of the gluinos. While squarks are expected to decay preferrably into a quark and the LSP, gluinos predominantly decay into a quark pair and the LSP. In case of gluino decays, the quark pair can also be, for instance, a pair of top quarks representing the case of gluino-mediated stop production. In all such cases, a multijet final state accompanied by missing transverse momentum with no isolated leptons is expected as experimental signature\footnote{In general, final state topologies including leptons can occur as well, for instance in cascade decays or semi-leptonic decays of final state top quarks. However, since the analyses presented in this thesis concentrate on all-jet final states, final states including leptons are not discussed.}.  
 \begin{figure}[!t]
   \centering
   % \makebox[\linewidth]{
@@ -269,8 +271,9 @@ As soon as first collision data have been obtained at the LHC at a centre of mas
   \caption{Interpretation of searches for supersymmetry at the CMS experiment within the CMSSM. Shown are the 95\% CL exclusion limits in the $m_0$ and $m_{1/2}$ plane for various searches performed using different final state topologies~\cite{bib:CMS:PhysicsResultsSUS}.}
   \label{fig:CMSSM_7TeV}
 \end{figure}
-For comparison, also the exclusion curves from the LEP experiments are illustrated in the $m_0/m_{1/2}$-plane which have been widely exceeded already with those early searches performed at the LHC. In general, the exclusions in the CMSSM $m_0/m_{1/2}$-plane translate into constraints on the respective sparticle masses of around 1.3\tev in case of $m_{\tilde{g}} = m_{\tilde{q}}$ obtained from searches based on all-hadronic states as described above.  \\
-In addition to such interpretations in full models like the CMSSM, in which several experimental observables are predicted based on few theoretical parameters, results of SUSY searches are also interpreted in the context of \textit{simplified models}~\cite{ArkaniHamed:2007fw, Alwall:2008ag, Alwall:2008va, Chatrchyan:2013sza}. Since often, many SUSY models predict a similar phenomenology, simplified models do not rely on detailed descriptions of specific model parameters but moreover characterize the dominant features of SUSY events that are common for several SUSY and SUSY-like models. Thus, the characterization of basic properties allows a comparison of search results to any (more complex) model. A simplified model is described by a set of particles, their masses and a certain sequence of the particle production and decay. Typical benchmark scenarios are for instance those illustrated in Fig.~\ref{fig:susy_decay} in which the only free parameters are the two sparticle masses. The branching ratios of the pair-produced initial particles into the final state particles are assumed to be 100\%. Interpretations of SUSY searches at the CMS experiment within the context of these simplified models are illustrated in Fig.~\ref{fig:SMS_7TeV} for $\tilde{g} \rightarrow qq\tilde{\chi}^0$ and $\tilde{q} \rightarrow q \tilde{\chi}^0$. These illustrate the 95\% confidence level upper limit on the product of the cross section and branching fraction as function of the sparticles masses. Hence, the values of cross sections times branching ratio can be compared to any theoretical prediction in order to determine whether the specific model is compatible with data. The exclusion curves shown in Fig.~\ref{fig:SMS_7TeV} indicate that, in the context of these specific simplified models, gluinos with masses up to around 1\tev and light-flavour squarks around 800\gev are excluded in case of LSP masses up to around 100\gev. \\
+For comparison, also the exclusion curves from the LEP experiments are illustrated in the $m_0/m_{1/2}$-plane which have been widely exceeded already with those early searches performed at the LHC. In general, the exclusions in the CMSSM $m_0/m_{1/2}$-plane translate into constraints on the respective sparticle masses of around 1.3\tev in case of $m_{\tilde{g}} = m_{\tilde{q}}$ obtained from searches based on all-hadronic states as described above. However, interpreting search results only in the context of the CMSSM carries some risks. The simplified assumption of universal gaugino masses at the GUT scale does not allow all mass patterns and signatures that are in general possible within the MSSM. Thus, the CMSSM imposes for some SUSY topologies too strong constraints. \\
+Thus, results of SUSY searches are, in addition to interpretations in the CMSSM, also interpreted in the context of \textit{simplified models}~\cite{ArkaniHamed:2007fw, Alwall:2008ag, Alwall:2008va, Chatrchyan:2013sza}. Since often, many SUSY models predict a similar phenomenology, simplified models do not rely on detailed descriptions of specific model parameters, but moreover characterize the dominant features of SUSY events that are common for several SUSY and SUSY-like models. Thus, the characterization of basic properties allows a comparison of search results to any (more complex) model and provides a suitable framework for reinterpretations of results from SUSY searches. A simplified model is described by a set of particles, their masses and a certain sequence of the particle production and decay. Typical benchmark scenarios are for instance those illustrated in Fig.~\ref{fig:susy_decay} in which the only free parameters are the two sparticle masses. The branching ratios of the pair-produced initial particles into the final state particles are assumed to be 100\%. Interpretations of SUSY searches at the CMS experiment within the context of these simplified models are illustrated in Fig.~\ref{fig:SMS_7TeV} for $\tilde{g} \rightarrow qq\tilde{\chi}^0$ and $\tilde{q} \rightarrow q \tilde{\chi}^0$. These illustrate the 95\% confidence level upper limit on the product of the cross section and branching fraction as function of the sparticles masses. Hence, the values of cross sections times branching ratio can be compared to any theoretical prediction in order to determine whether the specific model is compatible with data. The exclusion curves shown in Fig.~\ref{fig:SMS_7TeV} indicate that, in the context of these specific simplified models, gluinos with masses up to around 1\tev and light-flavour squarks around 800\gev are excluded in case of LSP masses up to around 100\gev. \\
+However, interpretations in simplified models typically target only well-defined isolated SUSY topologies and thus do not account for all possible decay patterns in the MSSM. Consequently, also interpretations in more general models are desirable. One such example of a more generic SUSY model is the pMSSM~\cite{Djouadi:1998di}. The pMSSM is a 19-parameter realization of the MSSM and captures most of the features of general $R-$parity conserving SUSY models and covers a wide diversity of possible SUSY topologies. The MSSM is constrained by assuming that there is no new source of $CP$-violation, that no flavour changing neutral currents occur and that the first two sfermion generations are degenerate. Interpretations of CMS SUSY searches performed at $\sqrt{s} = 7$\tev within the pMSSM are published in~\cite{CMS-PAS-SUS-12-030}. A discussion of updated results follows in Sec.~\ref{sec:susy_status}.
 \begin{figure}[!tp]
   \centering 
   \begin{tabular}{cc}
