--- a/Thesis.bib
+++ b/Thesis.bib
@@ -2160,6 +2160,32 @@ author = "John Ellis and J.S. Hagelin and D.V. Nanopoulos and K. Olive and M. Sr
       SLACcitation   = "%%CITATION = ARXIV:0705.2008;%%",
 }
 
+@article{Djouadi:2005gj,
+      author         = "Djouadi, Abdelhak",
+      title          = "{The Anatomy of electro-weak symmetry breaking. II. The
+                        Higgs bosons in the minimal supersymmetric model}",
+      journal        = "Phys.Rept.",
+      volume         = "459",
+      pages          = "1-241",
+      doi            = "10.1016/j.physrep.2007.10.005",
+      year           = "2008",
+      eprint         = "hep-ph/0503173",
+      archivePrefix  = "arXiv",
+      primaryClass   = "hep-ph",
+      reportNumber   = "LPT-ORSAY-05-18",
+      SLACcitation   = "%%CITATION = HEP-PH/0503173;%%",
+}
+
+@techreport{CMS-PAS-SUS-12-030,
+      title         = "{Phenomenological MSSM interpretation of the CMS 2011
+                       5fb-1 results}",
+      institution   = "CERN",
+      collaboration = "CMS Collaboration",
+      address       = "Geneva",
+      number        = "CMS-PAS-SUS-12-030",
+      year          = "2013",
+}
+
 % --- Indirect searches for new physics -------------------
 @Article{Chen:2001fja,
      author    = "Chen, S. and others",
